# task-star

./: .gitignore  AUTO_SETUP_README.md  DEPLOYMENT.md  LICENSE  OPTIMIZATION_SUMMARY.md  QUICK_START.md  README.md  REFACTOR_SUMMARY.md  SOLUTION.md  TASK_EXECUTION.md  auto_setup.py  main.py  pyproject.toml  requirements.txt  simple_fill.py  test_comprehensive.py  test_run.py  test_unit.py  ui_app.py
config/: config.yaml  default_config.yaml  selectors.yaml
src/task_star/: __init__.py  browser.py  config.py  core_logic.py  error_handler.py  exceptions.py  utils.py
src/task_star/strategies/: __init__.py  base.py  blank.py  dropdown.py  multiple.py  single.py
