[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "task-star"
version = "1.0.0"
authors = [
  { name="Task-Star Team", email="task-star@example.com" },
]
description = "问卷星自动填写工具"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.1",
    "pyyaml>=6.0",
]

[project.scripts]
taskstar = "task_star.main:main"
